# binance-rs

./: .gitignore  Cargo.toml
benches/: websocket_benchmark.rs
examples/: binance_endpoints.rs  binance_futures_endpoints.rs  binance_websockets.rs
src/: account.rs  client.rs  errors.rs  ffi.rs  general.rs  lib.rs  market.rs  model.rs  savings.rs  userstream.rs  util.rs  websockets.rs  websockets_async.rs
src/futures/: account.rs  general.rs  market.rs  mod.rs  model.rs  userstream.rs  websockets.rs  websockets_async.rs
src/websocket/: mod.rs  tokio_websockets.rs  websocket.rs
tests/: account_tests.rs  futures_account_tests.rs  futures_general_tests.rs  futures_market_test.rs  general_tests.rs  market_tests.rs
