[package]
name = "binance"
version = "0.20.2"
license = "MIT OR Apache-2.0"
authors = ["Flavio Oliveira <flavio@wisespace.io>"]
edition = "2018"

description = "Rust Library for the Binance API"
keywords = ["cryptocurrency", "trading", "binance"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/crate/binance/"
repository = "https://github.com/wisespace-io/binance-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "wisespace-io/binance-rs" }

[lib]
name = "binance"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0.38"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "fs", "net", "signal"] }
tokio-util = { version = "0.7.10", features = ["rt"] } 
sync_stream = "0.1.0"
# tokio-stream = { version = "0.1.14", features = ["sync"] }
# tokio-rustls = "0.25.0"
futures-util = { version = "0.3.29", features = ["io"] }

hex = "0.4"
hmac = "0.12.1"
sha2 = "0.10.6"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0"
error-chain = { version = "0.12.4", default-features = false }
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
tungstenite = { version = "0.19.0", features = ["native-tls"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.4.0"
log = "0.4.20"

[features]
vendored-tls = ["reqwest/native-tls-vendored", "tungstenite/native-tls-vendored"]

[dev-dependencies]
csv ="1.2.2"
mockito = "1.1.0"
env_logger = "0.10.0"
criterion = "0.5"
float-cmp = "0.9.0"
serde_json = "1.0"

[[bench]]
name = "websocket_benchmark"
harness = false
